<resources>
    <string name="app_name">Space Now</string>
    <string name="app_name_extended">Space Images, Facts, News &amp; Glossary</string>
    <string name="news">News</string>
    <string name="launches">Launches</string>
    <string name="apod">Astronomy picture of the day</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="facts">Space Facts</string>
    <string name="filter">Filter</string>
    <string name="news_sources">News source</string>
    <string name="last_apods">Last astronomy pictures</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="days">days</string>
    <string name="clock_dots">:</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="seconds">seconds</string>
    <string name="zz">00</string>
    <string name="watch">Watch</string>
    <string name="missions">Missions</string>
    <string name="location">Location</string>
    <string name="rocket">Rocket</string>
    <string name="notification">Notifications</string>
    <string name="download">Download</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>
    <string name="share">Share</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_launch_notification">Launch notification</string>
    <string name="rate">Rate the app</string>
    <string name="home">Home</string>
    <string name="earth_distance">Earth distance: %1$.2f km</string>
    <string name="mars_distance">Mars distance: %1$.2f km</string>
    <string name="roadster_speed">Speed: %1$.2f km/h</string>
    <string name="next_launch">Next launch</string>
    <string name="launch_upcoming_preview">%1$s | %2$s UTC</string>
    <string name="launch_date_label">%1$s UTC</string>
    <string name="space_x_label">Space X</string>
    <string name="upcoming_launches">Upcoming launches</string>
    <string name="past_launches">Past launches</string>
    <string name="latest_launch">Latest launch</string>
    <string name="did_you_know">Did you know?</string>
    <string name="launch_available">Available for launch</string>
    <string name="launch_success">Launched successfully</string>
    <string name="launch_unknown">Unknown status</string>
    <string name="launch_failure">Launch failed</string>
    <string name="select_another">Select another</string>
    <string name="no_apod_label">There is no picture for the selected date</string>
    <string name="launch_notification_on">You will be notified at launch time</string>
    <string name="launch_notification_off">You won`t be notified at launch time</string>
    <string name="iss_live_label">ISS Live</string>
    <string name="iss">International Space Station</string>
    <string name="launch_notification_message">%1$s is about to launch soon!</string>
    <string name="iss_pass_label">When will be ISS above my location?</string>
    <string name="iss_pass_message">ISS will be above your location around %1$s UTC time</string>
    <string name="copyright">
        <![CDATA[
        The app is using the News API provided by HubbleSite\n
        www.hubblesite.org/contact\n\n
        All credits goes to NASA, Hubble, SpaceX
        ]]>
    </string>
    <string name="loading">loading…</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="pref_launch_notification_titles">
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_launch_notification_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>-1</item>
    </string-array>
</resources>
