<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/primary">
        <item
            android:id="@+id/apod_fragment"
            android:title="@string/apod" />
        <item
            android:id="@+id/launches_fragment"
            android:title="@string/launches" />
        <item
            android:id="@+id/news_fragment"
            android:title="@string/news" />
        <item
            android:id="@+id/facts_fragment"
            android:title="@string/facts" />
    </group>

    <group android:id="@+id/secondary">
        <item
            android:id="@+id/settings_fragment"
            android:title="@string/settings" />
        <item
            android:id="@+id/about_fragment"
            android:title="@string/about" />
    </group>

</menu>