<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/launches_fragment">

    <fragment
        android:id="@+id/news_fragment"
        android:name="space.pal.sig.view.news.NewsFragment"
        android:label="@string/news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/launches_fragment"
        android:name="space.pal.sig.view.launches.LaunchesFragment"
        android:label="@string/launches"
        tools:layout="@layout/fragment_launches" />

    <fragment
        android:id="@+id/apod_fragment"
        android:name="space.pal.sig.view.apod.ApodFragment"
        android:label="@string/apod"
        tools:layout="@layout/fragment_apod" />

</navigation>