<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.activity.LaunchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:background="@color/colorAccent"
            app:contentScrim="@color/colorAccent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout"
                android:orientation="vertical"
                app:layout_collapseMode="pin"
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:fitsSystemWindows="true"
                    android:id="@+id/rocket_image"
                    android:contentDescription="@string/rocket_launches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:id="@+id/name"
                    android:textStyle="bold"
                    android:textSize="@dimen/size_20"
                    android:background="@color/colorPrimaryTransparent"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:padding="@dimen/padding_16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@android:color/transparent"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <LinearLayout
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_16"
            android:paddingBottom="@dimen/padding_16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/status"
                android:textSize="@dimen/size_16"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardCornerRadius="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RelativeLayout
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            app:cardCornerRadius="10dp"
                            android:id="@+id/card_status"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/launch_status"
                                android:textSize="@dimen/size_14"
                                android:textColor="@color/colorWhite"
                                android:padding="@dimen/padding_8"
                                android:textStyle="bold"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </androidx.cardview.widget.CardView>

                        <View
                            android:alpha="0.3"
                            android:layout_centerInParent="true"
                            android:background="@color/colorPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/clock"
                        android:layout_marginTop="@dimen/margin_8"
                        android:layout_marginBottom="@dimen/margin_8"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/days"
                                android:text="@string/zz"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:text="@string/days"
                                android:gravity="center"
                                android:textSize="@dimen/size_14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:text="@string/clock_dots"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/hours"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:text="@string/zz"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:text="@string/hours"
                                android:gravity="center"
                                android:textSize="@dimen/size_14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:text="@string/clock_dots"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/minutes"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:text="@string/zz"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:text="@string/minutes"
                                android:gravity="center"
                                android:textSize="@dimen/size_14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_marginEnd="@dimen/margin_8"
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:text="@string/clock_dots"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/seconds"
                                android:gravity="center"
                                android:textSize="40sp"
                                android:text="@string/zz"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <TextView
                                android:text="@string/seconds"
                                android:gravity="center"
                                android:textSize="@dimen/size_14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                        </LinearLayout>

                    </LinearLayout>

                    <View
                        android:alpha="0.3"
                        android:id="@+id/divider2"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                    <TextView
                        android:padding="@dimen/padding_16"
                        android:id="@+id/date"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <View
                        android:alpha="0.3"
                        android:id="@+id/divider3"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"/>

                    <Button
                        android:id="@+id/watch"
                        android:layout_gravity="center"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watch"
                        android:textColor="@color/colorAccent" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_marginTop="@dimen/margin_8"
                android:id="@+id/missions"
                android:text="@string/missions"
                android:textSize="@dimen/size_16"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/missions_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginTop="@dimen/margin_8"
                android:text="@string/location"
                android:textSize="@dimen/size_16"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:paddingTop="@dimen/padding_8"
                android:paddingBottom="@dimen/padding_8"
                android:paddingStart="@dimen/padding_16"
                android:paddingEnd="@dimen/padding_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:layout_marginTop="@dimen/margin_4"
                android:layout_marginBottom="@dimen/margin_4"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                app:cardCornerRadius="@dimen/margin_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/location_name"
                        android:textSize="@dimen/size_14"
                        android:padding="@dimen/padding_16"
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
        
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>